--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ h1 {
 }
 
 .paragraph-2 {
-  order: 10px solid pink;
+  border: 10px solid pink;
   font-size: 24pt;
   border-radius: 5px;
   margin-bottom: 60px;
@@ -24,5 +24,8 @@ h1 {
 }
 
 .paragraph-4 {
-  
+  font-size:24px;
+  font-style: italic;
+  text-align: center;
+  text-shadow:green 2px 2px 2px;
 }
